Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 5.3.0
-
Fix Version/s: 5.3.2
-
Component/s: Widgets: Widgets and Dialogs
-
Labels:None
-
Commits:9f486efcbe5ca0f5bb8ba895c4931a5e30748ed6
Description
Adding a button (via addAction) to a QLineEdit sets the cursor for the button to the cursor of the line edit instead of Qt::ArrowCursor.
While hovering over the button the cursor should change to an arrow.